# photolib

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vitest.config.ts  照片管理桌面应用-技术方案.md
.trae/rules/: git-commit-message.md
docs/superpowers/plans/: 2025-06-25-image-list-loading-p0.md  2025-06-25-image-loading-perf-notes.md  2026-06-26-album-directories-display.md  2026-06-26-photo-preview.md  2026-06-27-photo-detail-theme.md
docs/superpowers/specs/: 2026-06-26-album-directories-display-design.md  2026-06-26-photo-preview-design.md  2026-06-27-photo-detail-theme-design.md
src/: App.tsx  api.ts  index.css  main-skeleton-handler.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: debug_thumb.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  exif_pool.rs  export.rs  lib.rs  main.rs  metadata.rs  models.rs  scanner.rs  thumbnail.rs  watchdog.rs  watcher.rs  win_thumbcache.rs
src-tauri/tests/: build_enriched_skeleton.rs
src/__tests__/: main-skeleton-handler.test.ts
src/components/browser/: PhotoDetail.tsx  PhotoPreview.tsx  ThumbnailGrid.tsx
src/components/browser/__tests__/: PhotoDetail.test.tsx  PhotoPreview.test.tsx  ThumbnailCell.test.tsx
src/components/layout/: StatusBar.tsx  Toolbar.tsx
src/components/panel/: FilterPanel.tsx  FolderTree.tsx  LeftPanel.tsx  MetadataPanel.tsx
src/components/panel/__tests__/: LeftPanel.test.tsx
src/mock/: data.ts
src/stores/: appStore.ts
src/stores/__tests__/: appStore.test.ts
src/types/: index.ts
