[package]
name = "photolib"
version = "0.1.0"
description = "轻量级专业照片管理工具"
authors = ["阿星"]
edition = "2021"

[lib]
name = "photolib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = { version = "6", features = ["macos_kqueue"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
kamadak-exif = "0.6"
